AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libcomm.a

libcomm_a_SOURCES = ./Agent.cpp \
					./debug.cpp \
					./AgentManager.cpp \
					./BaseTask.cpp \
					./BufferManager.cpp \
					./Epoll.cpp \
					./EpollEvent.cpp \
					./Exception.cpp \
					./Client.cpp \
					./SocketAddress.cpp \
					./TCPSocket.cpp \
					./Tool.cpp \
					./TCPListenAgent.cpp \
					./TCPAgent.cpp \
					./Server.cpp  \
					./XMLConfig.cpp

INCLUDES = $(GLOBAL_INCLUDES)

LIBS += $(GLOBAL_LIBS)

CXXFLAGS = $(GLOBAL_FLAGS) 
